# OptionsAnalysisToolkit

./: Cargo.toml  README.md  index.html
src/: app.rs  black_scholes.rs  greeks.rs  implied_volatility.rs  main.rs  monte_carlo_sim.rs
src/components/: counter.rs  greeks_table.rs  header.rs  mod.rs
ui/: main.slint
