[package]
name = "OptionsAnalysisToolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
statrs = "0.15.0"
rand = "0.8.5"
rand_distr = "0.4"  # or the latest version
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.72"
gloo-timers = { version = "0.2", features = ["futures"] }